base/backend/proclone-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: proclone-backend
spec:
    replicas: 1
    selector:
        matchLabels:
            app: proclone-backend
    template:
        metadata:
            labels:
                app: proclone-backend
        spec:
            containers:
                - name: proclone-backend
                  image: ghcr.io/cpp-cyber/proclone:latest
                  imagePullPolicy: Always
                  ports:
                      - containerPort: 8080
                        protocol: TCP
                  volumeMounts:
                  - name: uploads
                    mountPath: /app/uploads
            volumes:
              - name: uploads
                persistentVolumeClaim:
                  claimName: proclone-backend-pvc
