base/backend/service-entry.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: allow-external-ldap
spec:
  hosts:
  - "[your.domain.controller]" # replace
  location: MESH_EXTERNAL
  ports:
  - number: 389
    name: ldap
    protocol: TCP
  resolution: DNS
